# treebird

./: $  .gitignore  .gitmodules  CMakeLists.txt  CREDITS  INSTALL.md  LICENSE  Makefile  README.md  config.def.h  config.h  ctemplate  premake4.lua  premake5.lua  treebird.example.conf  treebird.example.config  treebird.make  treebird.nginx.conf  treebird.uwsgi.ini
.fossil-settings/: ignore-glob
cmake/: append_and_def.cmake  os_hacks.cmake  set_and_def.cmake
docs/: DEVELOP.md  INSTALL.md
docs/sample/: openhttpd.conf  treebird.apache.conf  treebird.caddy  treebird.lighttpd.conf  treebird.nginx.conf
perl/: account.pm  attachments.pm  chat.pm  config.pm  embed.pm  emojis.pm  icons.pm  l10n.pm  lists.pm  login.pm  main.pl  meta.pm  navigation.pm  notifications.pm  postbox.pm  search.pm  status.pm  string_helpers.pm  template_helpers.pm  timeline.pm
scripts/: debug-fcgistarter.sh  emoji-to.c  fcgistarter.sh
src/: .#attachments.c  .#status.c  about.c  about.h  account.c  account.h  applications.c  applications.h  attachments.c  attachments.h  base_page.c  base_page.h  cgi.h  config.c  config.h  conversations.c  conversations.h  cookie.c  cookie.h  easprintf.c  easprintf.h  emoji.c  emoji.h  emoji_codes.h  emoji_info.h  emoji_reaction.c  emoji_reaction.h  env.h  error.c  error.h  global_cache.c  global_cache.h  global_perl.c  global_perl.h  graphsnbars.c  graphsnbars.h  hashtag.c  hashtag.h  helpers.c  helpers.h  (+61 more)
src/file-to-c/: main.c
src/template/: main.c
src/test/: status_test.h
static/: .#navigation.html  about.ctmpl  about.tmpl  account.ctmpl  account.html  account.tmpl  account_current_menubar.tmpl  account_follow_btn.ctmpl  account_follow_btn.html  account_follow_btn.tmpl  account_info.ctmpl  account_info.html  account_info.tmpl  account_sidebar.ctmpl  account_sidebar.html  account_sidebar.tmpl  account_stub.ctmpl  account_stub.html  account_stub.tmpl  attachment_audio.ctmpl  attachment_audio.html  attachment_audio.tmpl  attachment_gifv.ctmpl  attachment_gifv.html  attachment_gifv.tmpl  attachment_image.ctmpl  attachment_image.html  attachment_image.tmpl  attachment_link.ctmpl  attachment_link.html  attachment_link.tmpl  attachment_video.ctmpl  attachment_video.html  attachment_video.tmpl  attachments.ctmpl  attachments.html  attachments.tmpl  bar.ctmpl  bar.html  bar.tmpl  (+157 more)
templates/: about.tt  account.tt  account_item.tt  account_scrobbles.tt  account_statuses.tt  accounts.tt  attachment.tt  chat.tt  config_appearance.tt  config_general.tt  content_chats.tt  content_lists.tt  content_notifs.tt  content_search.tt  content_status.tt  embed.tt  emoji.tt  emoji_picker.tt  license.tt  login.tt  main.ctt  main.tt  memory.tt  navigation.tt  notif_compact.tt  notification.tt  notifs_embed.tt  postbox.tt  search.tt  search_accounts.tt  search_statuses.tt  status.tt  status_interactions.tt  timeline.tt
test/: Makefile  test.h  test.pl  test_upload_file  tests
test/stress/: account_page.pl  federated_timeline.pl  helpers.pm  home_timeline.pl  local_timeline.pl  static_pages.pl
test/unit/: main.c  mime_multipart.c  string_test.c  t00_string.c  t01_mime.c
